--- a/index.html
+++ b/index.html
@@ -313,6 +313,13 @@
                 </form>
             </div>
         </div>
+
+        <!-- MAPA DE UBICACIÓN -->
+        <div class="container">
+            <div class="mapa-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.5429287659303!2d-77.0063652!3d-12.0759447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8c0c0c0c0c1%3A0x0!2sLamas%20407%2C%20La%20Victoria%2C%20Lima%2C%20Per%C3%BA!5e0!3m2!1ses!2s!4v1707396000000" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
     </section>
 
 
