Actualizar estilos y mejorar accesibilidad de imágenes en detalles de proyectos y equipos

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
             <!-- DETALLE DEL PROYECTO (aparece al hacer click en las pestañas) -->
             <div class="proyecto-detail" id="proyecto-detail" style="display:none;">
                 <div class="detail-inner">
-                    <div class="detail-image" id="detail-image" aria-hidden="true"></div>
+                        <div class="detail-image" id="detail-image" aria-hidden="true">
+                            <img id="detail-image-img" src="" alt="Imagen del proyecto" aria-hidden="false">
+                        </div>
                     <div class="detail-text">
                         <h3 id="detail-title">Planos Técnicos Detallados</h3>
                         <p id="detail-desc">Descripción del proyecto seleccionado. Aquí aparecerá información detallada junto a una imagen ilustrativa con una animación elegante.</p>
@@ -250,7 +252,9 @@
             <!-- DETALLE DEL EQUIPO (aparece al hacer click en las pestañas) -->
             <div class="equipo-detail" id="equipo-detail" style="display:none;">
                 <div class="detail-inner">
-                    <div class="detail-image" id="equipo-detail-image" aria-hidden="true"></div>
+                    <div class="detail-image" id="equipo-detail-image" aria-hidden="true">
+                        <img id="equipo-detail-image-img" src="" alt="Imagen del equipo" aria-hidden="false">
+                    </div>
                     <div class="detail-text">
                         <h3 id="equipo-detail-title">Doméstico</h3>
                         <p id="equipo-detail-desc">Ofrecemos tableros domésticos en cajas de plástico resistente, diseñados para la protección y distribución eléctrica en viviendas. Son duraderos y personalizables según la cantidad de equipos a instalar, garantizando una solución segura y funcional.</p>
